test/modules/standard/Random/bradc/test-Random-evenseed.good
test-Random-evenseed.chpl:14: error: halt reached - RandomStream seed must be an odd integer between 0 and 2**46
